client/css/widgets/scoreboard.css
.scoreboard {
  box-sizing: border-box;
  background: #ffffff;
  color: #ffffff;
  border: 2px solid black;
  display: flex;
  justify-content: center;
  align-items: center;
}

.scoreboard table {
  border:  none;
  border-collapse: separate;
  border-spacing: 0;
  display: block;
  overflow-x: auto;
  overflow-y: auto;
}

.scoreboard .firstRow.firstCol {
  z-index: 2;
}

.scoreboard .firstRow {
  position: sticky;
  z-index: 1;
  top: 0;
  background-color: #ddd;
}

.scoreboard .firstCol {
  position: sticky;
  left: 0;
  background-color: #ddd;
}

.scoreboard tbody td {
  border-bottom: 1px solid #ddd;
  border-right: 1px solid #ddd;
  color: #333;
  padding: 5px;
  text-shadow: 1px 1px 1px #fff;
  text-align: right;
  white-space: nowrap;
  background-color: #f8f8f8;
}

.scoreboard .totalsLine {
  background-color: #ddd;
  position: sticky;
  bottom: 0;
}

